new try fixing blur in iphone

--- a/app/blurIphone.css
+++ b/app/blurIphone.css
@@ -1,4 +1,5 @@
 .iphone-blur{
+    background: rgba(255, 255, 255, 0.014);
     -webkit-backdrop-filter: saturate(180%) blur(20px);
     -moz-backdrop-filter:saturate(180%) blur(20px); 
     backdrop-filter:saturate(180%) blur(20px); 
